[package]
name = "psytumn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.22.0"
hecs = "0.9.1"
sdl2 = { version = "0.35.2", features = ["image", "mixer", "unsafe_textures"] }
sdl2_particles = "0.2.0"
sdl2_animation = {path = "../sdl2_animation"}
time = "0.3.17"
rand = "0.8.5"
bracket-noise = "0.8.7"
puffin = "0.14.2"
puffin_http = { version = "0.11.1", optional = true}
easey = "2.1.0"

[features]
puffin = ["puffin_http"]
